# CrossPlatform-TaskManager

./: CMakeLists.txt  README.md
include/: PlatformUtils.hpp  PluginInterface.hpp  Task.hpp  TaskManager.hpp
plugins/sample_plugin/: CMakeLists.txt  SamplePlugin.cpp
src/: PlatformUtils.cpp  TaskManager.cpp  main.cpp
tests/: CMakeLists.txt  TaskManagerTests.cpp  test_main.cpp
